[package]
name = "neptune-triton"
description = "Futhark implementation of neptune-compatible Poseidon."
version = "0.1.0"
authors = ["porcuquine <porcuquine@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
