[package]
name = "example"
version = "0.1.0"
authors = ["porcuquine <porcuquine@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
triton = { path = "../library/triton", default-features=false, features=["opencl"] }
